--- a/style[1].css
+++ b/style[1].css
@@ -7,7 +7,7 @@ div.wrapper {position:relative; top:0px; left:0;width:970px; margin:auto; text-a
 /*add display attributes for the semantic tags*
 header, footer, section, article, nav { display:block;
 }
-/*SET FONTS*/
+/*SET FONTS*
 span.small { font-size:small;
 }
 
@@ -22,23 +22,23 @@ nav#gallerypagenav.data { float:left; margin-left:10px; width:115px;
 }
 nav#gallerypagenav.data ul { margin-left:0; border:0; width:115px;
 }
-/*set far right column for ads*/
+/*set far right column for ads*
 div#gallerypagerightcol.data { width: 150px; float:right; text-align:center;
 }
 div#gallerypagerightcol.data p.advert {font-size:small; margin-top:190px;
 }
-/*set middle column for main content*/
+/*set middle column for main content*
 div#gallerypagemidcol.data { margin-left:135px; margin-right:155px;
 }
-/*set gallery block position*/
+/*set gallery block position*
 div#gallerypagegallery-block.data { position:relative; left: 30px; top: -495px;
 }
-/*set footer*/
+/*set footer*
 footer#gallerypagefooter { clear:both; color:black; text-align:center; width:970px;
 }
 .clear { clear:both;
 }
-/*set menu buttons*/
+/*set menu buttons*
 #gallerypagenav li.btn a { display:block; background-color :#66CCFF; color:black; font-weight:bold; padding:4px; margin-left:0; text-align:center; list-style-type:none; text-decoration:none; width:110px;
 }
 #gallerypagenav li.btn a:hover { background-color:blue; color:white;
@@ -46,42 +46,42 @@ footer#gallerypagefooter { clear:both; color:black; text-align:center; width:970
 #gallerypagenav li.btn { width:110px;
 }
 /*SET THUMBNAIL GALLERY BLOCK*/
-/* Set general thumbnail styles */
+/* Set general thumbnail styles *
 #col-1 { position: absolute; top: 0; left: 0; width:85px;
 }
-/*place the first column on the page*/
+/*place the first column on the page*
 li { margin: 5px; list-style-type:none;
 }
 /*remove bullets from the un-ordered list elements and create the 
 MouseOut state (default) - create and position a space for the larger images and 
-hide them*/
+hide them*
 #col-1 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 330px; visibility: hidden;
 }
-/* MouseOver state (hover)- this reveals larger picture */
+/* MouseOver state (hover)- this reveals larger picture *
 #col-1 a:hover { background: white; }
 #col-1 a:hover img.hid { visibility:visible;
 }
 /*----------------------------------------------------*/
-/* set 2nd column of thumbnails 85px further over to right*/
+/* set 2nd column of thumbnails 85px further over to right*
 #col-2 { position: absolute; top: 0; left: 85px; width:85px;
 }
 li { margin: 5px; list-style-type:none;
 }
-/* MouseOut state (default) - hide larger picture */
+/* MouseOut state (default) - hide larger picture *
 #col-2 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 245px; margin-left:0;visibility: hidden;
 }
-/* MouseOver state (hover)- reveal larger picture */
+/* MouseOver state (hover)- reveal larger picture *
 #col-2 a:hover { background: white; }
 #col-2 a:hover img.hid { visibility:visible; }
 /*----------------------------------------------------*/
-/* set 3rd column of thumbnails 170px further over to right*/
+/* set 3rd column of thumbnails 170px further over to right*
 #col-3 { position: absolute; top: 0; left: 175px; width:95px; }
 li { margin: 5px; list-style-type:none;
 }
-/* MouseOut state (default) - hide larger picture */
+/* MouseOut state (default) - hide larger picture *
 #col-3 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 }
-/* MouseOver state (hover)- reveal larger picture */
+/* MouseOver state (hover)- reveal larger picture *
 #col-3a:hover { background: white;
 }
 #col-3 a:hover img.hid { visibility:visible;
@@ -97,7 +97,7 @@ h2#html5style2h2 { font: 300 2em /1 'Raleway', sans-serif; color: #FFF; padding:
 .social i:hover { color: #F6931E;}
 p { padding: 2%;}
 
-/*equalise for various browsers and change #header to header*/
+/*equalise for various browsers and change #header to header*
 div body header #content {
   margin: 0;
   padding: 0;
@@ -109,7 +109,7 @@ body {
   margin: auto;
 }
 
-/*add display attributes for the semantic tags*/
+/*add display attributes for the semantic tags*
 header,
 footer,
 section,
@@ -118,7 +118,7 @@ nav {
   display: block;
 }
 
-/*remove the # from #header*/
+/*remove the # from #header*
 header#html5style2header.data {
   width: 920px;
   height: 180px;
@@ -176,7 +176,7 @@ div#html5style2leftcol.data {
 }
 
 /*#html5style2rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
-}*/
+}*
 div#html5style2midcol.data {
   margin-left: 315px;
   margin-right: 145px;
@@ -186,26 +186,26 @@ div#html5style2midcol.data {
 
 /*set nav block position and width*/
 /*nav { margin:10px 30px 0 10px; width:135px; float:right; 
-}*/
+}*
 nav#html5style2nav.data ul {
   margin: 10px 0 10px 0;
   width: 135px;
   float: right;
 }
 
-/*Set un-ordered list style within the menu block only. This removes bullets*/
+/*Set un-ordered list style within the menu block only. This removes bullets*
 nav#html5style2nav.data li {
   list-style-type: none;
 }
 
-/* set general side button styles */
+/* set general side button styles *
 li.btn {
   margin-bottom: 3px;
   text-align: center;
   width: 130px;
 }
 
-/* set general anchor styles and include the zoom fix for IE6*/
+/* set general anchor styles and include the zoom fix for IE6*
 li.btn a {
   display: block;
   color: white;
@@ -215,7 +215,7 @@ li.btn a {
 }
 
 /* specify mouse state styles */
-/* mouseout (default) */
+/* mouseout (default) *
 li.btn a {
   background: #559a55;
   color: white;
@@ -223,14 +223,14 @@ li.btn a {
   padding-bottom: 3px;
 }
 
-/* mouseover */
+/* mouseover *
 li.btn a:hover {
   background: red;
   color: white;
   border: 5px outset red;
 }
 
-/*mouse active*/
+/*mouse active*
 li.btn a:active {
   background: maroon;
   border: 5px inset maroon;
@@ -250,51 +250,51 @@ footer#html5style2footer {
   text-align: center;
 }
 
-﻿/*set images to have no borders*/
+﻿/*set images to have no borders*
 img { border:none;
 }
-/* Set general thumbnail styles */
-#col-1	{ position: absolute; top: 0; left: 0; width:85px;} /*place the column on the page*/
+/* Set general thumbnail styles *
+#col-1	{ position: absolute; top: 0; left: 0; width:85px;} /*place the column on the page*
 li	{ margin: 5px; list-style-type:none; } /*remove bullets from the list elements*/
-/* MouseOut state (default) - create and position a space for the larger images and hide them*/
+/* MouseOut state (default) - create and position a space for the larger images and hide them*
 #col-1 a img.hid { width: 250px; height:340px;
 	position: absolute; top: 10px; left: 400px;
 	visibility: hidden;
 	}
 
-/* MouseOver state (hover)- reveal larger picture */
+/* MouseOver state (hover)- reveal larger picture *
 #col-1 a:hover { background: white; }
 #col-1 a:hover img.hid { visibility:visible; }
 
 /*----------------------------------------------------*/
 
-/* set 2nd column of thumbnails 85px further over to right*/
+/* set 2nd column of thumbnails 85px further over to right*
 #col-2	{ position: absolute; top: 0; left: 85px; width:135px; }
 li	{ margin: 5px; list-style-type:none;	}
-/* MouseOut state (default) - hide larger picture */
+/* MouseOut state (default) - hide larger picture *
 #col-2 a img.hid {
 	width: 350px; height:265px;
 	position: absolute; top: 10px; left: 315px; margin-left:0;
 	visibility: hidden;
 	}
-/* MouseOver state (hover)- reveal larger picture */
+/* MouseOver state (hover)- reveal larger picture *
 #col-2 a:hover { background: white; }
 #col-2 a:hover img.hid { visibility:visible; }
 
 /*----------------------------------------------------*/
 
 
-/* set 3rd column of thumbnails 170px further over to right*/
+/* set 3rd column of thumbnails 170px further over to right*
 #col-3	{ position: absolute; top: 0; left: 230px; width:108px; }
 li	{ margin: 5px; list-style-type:none;	}
-/* MouseOut state (default) - hide larger picture */
+/* MouseOut state (default) - hide larger picture *
 #col-3 a img.hid {
 	width: 260px; height:260px;
 	position: absolute; top: 10px; left: 175px; margin-left:0;
 	visibility: hidden;
 	}
 
-/* MouseOver state (hover)- reveal larger picture */
+/* MouseOver state (hover)- reveal larger picture *
 #col-3 a:hover { background: white; }
 #col-3 a:hover img.hid { visibility:visible; }
 
