--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -20,7 +20,7 @@
   line-height: 1.4;
 }
 
-/* === equalise for various browsers and change #header to header === *
+/* === equalise for various browsers and change #header to header === */
 div body header #content {
   margin: 0;
   padding: 0;
@@ -32,7 +32,7 @@ body {
   margin: auto;
 }
 
-/*add display attributes for the semantic tags*
+/*add display attributes for the semantic tags*/
 header,
 footer,
 section,
@@ -40,7 +40,7 @@ article,
 nav {
   display: block;
 }
-/*remove the # from #header*
+/*remove the # from #header*/
 header#html5style2header.row.data {
   width: 920px;
   height: 180px;
@@ -49,138 +49,6 @@ header#html5style2header.row.data {
   background: url(images/header3.jpg);
   margin: 10px auto;
 }
-/*remove the # from #header*
-div#html5style2header.data {
-  width: 920px;
-  height: 180px;
-  padding: 0;
-  border: 10px white solid;
-  background: url(images/header3.jpg);
-  margin: 10px auto;
-}
-
-h1#html5style2h1 {
-  font-size: 300%;
-  color: white;
-  position: relative;
-  left: 90px;
-  top: -3px;
-  width: 480px;
-}
-
-div#html5style2rosette {
-  position: relative;
-  left: 750px;
-  top: 5px;
-}
-
-div#html5style2content.data {
-  background-color: transparent;
-  border-left: 10px white solid;
-  border-right: 10px white solid;
-  border-bottom: 10px white solid;
-  width: 904px;
-  margin-top: -10px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 8px;
-  font-size: medium;
-  color: maroon;
-}
-
-#html5style2h2 {
-  font-size: x-large;
-  color: white;
-  margin: 0 0 10px 0;
-}
-
-h3#html5style2h3 {
-  font-size: large;
-  color: white;
-  margin: 0 0 6px 0;
-}
-
-div#html5style2leftcol {
-  float: left;
-  width: 310px;
-  vertical-align: top;
-}
-
-/*#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;*
-
-div#html5style2midcol.data {
-  margin-left: 315px;
-  margin-right: 145px;
-  margin-top: 0px;
-  vertical-align: top;
-}
-
-/*set nav block position and width*
-nav#html5style2nav.data { margin:-25px 30px 0 10px; width:135px; float:right; 
-}*
-nav#html5style2nav.data ul {
-  margin: 10px 0 10px 0;
-  width: 135px;
-  float: right;
-}
-
-/*Set un-ordered list style within the menu block only. This removes bullets*
-nav#html5style2nav.data li {
-  list-style-type: none;
-}
-
-/* set general side button styles *
-li.btn {
-  margin-bottom: 3px;
-  text-align: center;
-  width: 130px;
-}
-
-/* set general anchor styles and include the zoom fix for IE6*
-li.btn a {
-  display: block;
-  color: white;
-  font-weight: bold;
-  text-decoration: none;
-  zoom: 1;
-}
-
-/* specify mouse state styles */
-/* mouseout (default) *
-li.btn a {
-  background: #559a55;
-  color: white;
-  border: 5px outset #559a55;
-  padding-bottom: 3px;
-}
-
-/* mouseover *
-li.btn a:hover {
-  background: red;
-  color: white;
-  border: 5px outset red;
-}
-
-/*mouse active*
-li.btn a:active {
-  background: maroon;
-  border: 5px inset maroon;
-}
-
-br.clear {
-  clear: both;
-}
-
-div#html5style2midcol img {
-  margin-top: 0px;
-}
-
-div#html5style2footer {
-  clear: both;
-  color: maroon;
-  text-align: center;
-}
-
 
 /* ===
  * Remove text-shadow in selection highlight:
@@ -4551,6 +4419,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
