--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -98,7 +98,7 @@ header#html5style2header.fixed-top {
   background: #07062f;
 }
 
-header#html5style2header .logo {
+header#html5-ch1-7header .logo {
   font-size: 30px;
   margin-top: -300px;
   padding: 0;
@@ -108,11 +108,11 @@ header#html5style2header .logo {
   text-transform: uppercase;
 }
 
-header#html5style2header .logo a {
+header#html5-ch1-7header .logo a {
   color: #fff;
 }
 
-header#html5style2header .logo img {
+header#html5-ch1-7header .logo img {
   max-height: 40px;
 }
 
@@ -129,7 +129,7 @@ p {
     text-align:center;
 }
 /*
-h1#html5style2h1 { font-size:300%; color :white; position: relative; left:15%; top: 55px; width:480px;
+h1#html5-ch1-7h1 { font-size:300%; color :white; position: relative; left:15%; top: 55px; width:480px;
 }
 */
 body {
@@ -149,7 +149,7 @@ nav {
 }
 
 /*remove the # from #header*/
-header#html5style2header {
+header#html5-ch1-7header {
   width: 920px;
   height: 180px;
   padding: 0;
@@ -158,7 +158,7 @@ header#html5style2header {
   margin: 10px auto;
 }
 
-h1#html5style2h1 {
+h1#html5-ch1-7h1 {
   font-size: 300%;
   color: white;
   position: relative;
@@ -189,7 +189,7 @@ h3#html5style2h3 {
   margin: 0 0 6px 0;
 }
 
-div#html5style2leftcol.data {
+div#html5-ch1-7col.data {
   float: left;
   width: 310px;
   vertical-align: top;
@@ -197,7 +197,7 @@ div#html5style2leftcol.data {
 
 /*#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }*/
-#html5style2midcol.data {
+#html5-ch1-7midcol.data {
   margin-left: 315px;
   margin-right: 145px;
   margin-top: 10px;
@@ -207,14 +207,14 @@ div#html5style2leftcol.data {
 /*set nav block position and width*/
 /*nav { margin:10px 30px 0 10px; width:135px; float:right; 
 }*/
-nav#html5style2nav ul {
+nav#html5-ch1-7nav ul {
   margin: 10px 0 10px 0;
   width: 135px;
   float: right;
 }
 
 /*Set un-ordered list style within the menu block only. This removes bullets*/
-nav#html5style2nav li {
+nav#html5-ch1-7nav li {
   list-style-type: none;
 }
 
@@ -260,7 +260,7 @@ br.clear {
   clear: both;
 }
 
-#html5style2midcol img {
+#html5-ch1-7midcol img {
   margin-top: 10px;
 }
 
@@ -4387,6 +4387,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
