--- a/style.css
+++ b/style.css
@@ -44,60 +44,59 @@ div.wrapper {
 }
 
 /* **************************************************************************** */
-/*equalise all the margins, paddings and borders built into various browsers* 
+/*equalise all the margins, paddings and borders built into various browsers*/ 
 div body header #content { margin:0; padding:0; border:0; 
 }
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
-/*add display attributes for the semantic tags*
+/*add display attributes for the semantic tags*/
 header, footer, section, article, nav { display:block; 
 }
-header {width:920px; height:180px; padding:0; border:10px white solid; 
-  background: url(../bda-20.jpg); margin:10px auto; 
+header#html5-ch1-7header {width:920px; height:180px; padding:0; border:10px white solid; background: url(../bda-20.jpg); margin:10px auto; 
 }
-h1 { font-size:300%; color :white; /* position: relative; left:90px; top: 55px; width:480px; *
+h1#html5-ch1-7h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px; width:480px;
 }
-#rosette { position:relative; left:750px; top:5px; 
+#html5-ch1-7rosette { position:relative; left:750px; top:5px; 
 }
 
-#style-content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
+#html5-ch1-7content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
 border-bottom:10px white solid; width: 904px; margin-top:10px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
 }
-h2 { font-size:x-large; color:white; margin:0 0 10px 0; 
+h2#html5-ch1-7h2 { font-size:x-large; color:white; margin:0 0 10px 0; 
 }
-h3 { font-size:large; color:white; margin:0 0 6px 0; 
+h3#html5-ch1-7h3 { font-size:large; color:white; margin:0 0 6px 0; 
 }
-#style-leftcol { float:left; width: 310px; vertical-align:top; 
+#html5-ch1-7leftcol { float:left; width: 310px; vertical-align:top; 
 }
-#style-rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
+#html5-ch1-7rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }
-#style-midcol { margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top; 
+#html5-ch1-7midcol { margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top; 
 }
 /* set side menu block position and width*/
-#style-nav { margin:10px 30px 0 10px; width:135px; float:right; 
+#html5-ch1-7nav { margin:10px 30px 0 10px; width:135px; float:right; 
 }
 /*Set list style within the menu block only. This removes bullets*/
-#style-nav li { list-style-type:none; 
+#html5-ch1-7 li { list-style-type:none; 
 }	
 /* set general side button styles */
-#style-nav li { margin-bottom: 3px; text-align: center; width:130px;
+#html5-ch1-7 li { margin-bottom: 3px; text-align: center; width:130px;
 }
 /* set general anchor styles and include the zoom fix for IE6*/
-#style-nav li a { display: block; color: white; font-weight: bold; text-decoration: none; zoom:1;
+#html5-ch1-7 li a { display: block; color: white; font-weight: bold; text-decoration: none; zoom:1;
 }
 /* specify mouse state styles */
 /* mouseout (default) */
-#style-nav li a { background:#559a55; color: white; border: 5px outset #559a55; padding-bottom:3px;
+#html5-ch1-7 li a { background:#559a55; color: white; border: 5px outset #559a55; padding-bottom:3px;
 }
 /* mouseover */
-#style-nav li a:hover { background: red;  color:white; border: 5px outset red;
+#html5-ch1-7 li a:hover { background: red;  color:white; border: 5px outset red;
 }
 /*mouse active*/
-#style-nav li a:active { background:maroon;  border: 5px inset maroon; 
+#html5-ch1-7 li a:active { background:maroon;  border: 5px inset maroon; 
 }
 br.clear { 	clear:both; 
 }
-#style-midcol img { margin-left:10px; 
+#html5-ch1-7midcol img { margin-left:10px; 
 }
 footer { clear:both; color:maroon; text-align:center; 
 }
