--- a/style[1].css
+++ b/style[1].css
@@ -128,7 +128,7 @@ div#html5-ch1-7header.data {
   margin: 10px auto;
 }
 
-h1#html5style2h1 {
+h1#html5-ch1-7h1 {
   font-size: 300%;
   color: white;
   position: relative;
