--- a/style[1].css
+++ b/style[1].css
@@ -137,13 +137,13 @@ h1#html5-ch1-7h1 {
   width: 480px;
 }
 
-#rosette {
+#html5-ch1-7rosette {
   position: relative;
   left: 750px;
   top: 5px;
 }
 
-div#html5style2content.data {
+div#html5-ch1-7content.data {
   background-color: transparent;
   border-left: 10px white solid;
   border-right: 10px white solid;
