--- a/style[1].css
+++ b/style[1].css
@@ -157,27 +157,27 @@ div#html5-ch1-7content.data {
   color: maroon;
 }
 
-h2#html5style2h2 {
+h2#html5-ch1-7h2 {
   font-size: x-large;
   color: blue;
   margin: 0 0 10px 0;
 }
 
-h3#html5style2h3 {
+h3#html5-ch1-7h3 {
   font-size: large;
   color: blue;
   margin: 0 0 6px 0;
 }
 
-div#html5style2leftcol.data {
+div#html5-ch1-7leftcol.data {
   float: left;
   width: 310px;
   vertical-align: bottom;
 }
 
-/*#html5style2rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
+/*##html5-ch1-7rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }*
-div#html5style2midcol.data {
+div#html5-ch1-7midcol.data {
   margin-left: 315px;
   margin-right: 145px;
   margin-top: 0px;
@@ -187,14 +187,14 @@ div#html5style2midcol.data {
 /*set nav block position and width*/
 /*nav { margin:10px 30px 0 10px; width:135px; float:right; 
 }*
-nav#html5style2nav.data ul {
+nav##html5-ch1-7nav.data ul {
   margin: 10px 0 10px 0;
   width: 135px;
   float: right;
 }
 
 /*Set un-ordered list style within the menu block only. This removes bullets*
-nav#html5style2nav.data li {
+nav##html5-ch1-7nav.data li {
   list-style-type: none;
 }
 
@@ -240,11 +240,11 @@ br.clear {
   clear: both;
 }
 
-div#html5style2midcol.data img {
+div##html5-ch1-7midcol.data img {
   margin-top: -510px;
 }
 
-footer#html5style2footer {
+footer##html5-ch1-7footer {
   clear: both;
   color: maroon;
   text-align: center;
