--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ div.wrapper {
     position: relative; 
     top: 0em; 
     left: 0; 
-    width: 61em; 
+    width: 100%; 
     margin: auto; 
     /* text-align: center; */
 }
