--- a/style.css
+++ b/style.css
@@ -753,7 +753,7 @@ position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 }
 
 
-/* ###################################### *
+/* ###################################### */
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
@@ -966,7 +966,7 @@ header .logo img {
 --------------------------------------------------------------*/
 /**
 * Desktop Navigation 
-*
+*/
 .navbar {
   padding: 0;
 }
