--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -101,7 +101,7 @@ div body header #content { margin:0; padding:0; border:0;
 /*set attributes for consistent appearance in all browsers*/
 html, body, p, ul, li, h1, h2 { margin:0; padding:0;
 }
-header#html5-ch1-7header.fixed-top {
+header#html5-ch1-7header.data .fixed-top {
   background: #07062f;
 }
 
@@ -171,23 +171,23 @@ h1#html5-ch1-7h1 {
   width: 480px;
 }
 
-#html5style2rosette {
+#html5-ch1-7rosette {
   position: relative;
   left: 750px;
   top: 5px;
 }
 
-div#html5style2content.data { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
+div#html5-ch1-7content.data { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
 border-bottom:10px white solid; width: 920px; margin-top:-26px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
 }
 
-h2#html5style2h2 {
+h2#html5-ch1-7h2 {
   font-size: x-large;
   color: white;
   margin: 0 0 10px 0;
 }
 
-h3#html5style2h3 {
+h3#html5-ch1-7h3 {
   font-size: large;
   color: white;
   margin: 0 0 6px 0;
@@ -199,7 +199,7 @@ div#html5-ch1-7col.data {
   vertical-align: top;
 }
 
-/*#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
+/*#html5-ch1-7rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }*/
 #html5-ch1-7midcol.data {
   margin-left: 315px;
@@ -264,7 +264,7 @@ br.clear {
   clear: both;
 }
 
-#html5-ch1-7midcol img {
+#html5-ch1-7midcol.data img {
   margin-top: 10px;
 }
 
@@ -4391,6 +4391,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
