--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -140,7 +140,7 @@ h1#html5-ch1-7h1 { font-size:300%; color :white; position: relative; left:15%; t
 }
 */
 
-div.wrapper {position:relative; top:0px; left:0;width:100%; margin:auto; text-align:center;
+div.wrapper {position:relative; top:0px; left:0;width:970px; margin:auto; text-align:center;
 }
 
 /*add display attributes for the semantic tags*
@@ -4391,6 +4391,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
