--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -1,10 +1,3 @@
-
-
-
-
-
-
-
 #navigation{
 	float: right;
 	width: 150px;
@@ -12,14 +5,14 @@
 #intro{
 	width: 450px;
 }
-/*
+
 body {
 	font-family: "Lucida Sans Unicode","Lucida Grande",Sans-Serif;
 	color: #3E3E3E;
-	background: #94C5EB url(./css-jq/images/background-grad.png) repeat-x;
+	background: #94C5EB url(../images/background-grad.png) repeat-x;
 	font-size: 12px;
 }
-*/
+
 p {
 	padding: 5px;
 }
@@ -28,7 +21,42 @@ a {
 	color: #3687AF;
 }
 
+#container{
+	margin:0 auto;
+	text-align: left;
+	width: 650px;
+}
 
+#header{
+	height: 60px;
+	color: #172322;
+	background: transparent url(../images/header-corners.png) no-repeat bottom left;
+}
+
+#header h1
+{
+	padding:0;
+	margin:0;
+}
+
+#content{
+	background-color: #fff;
+	padding: 0 15px 10px 15px;
+
+} 
+
+#footer{
+	background-color: #fff;
+	padding:15px;
+  clear: both;
+}
+
+h2 {
+	border-bottom:2px solid #015287;
+	color: #D15600;
+	padding-top: 10px;
+  margin-top: 0;
+}
 
 table {
 	border-collapse:collapse;
@@ -50,4 +78,3 @@ th {
 td {
 	padding: 6px;
 }
-
