--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -9,7 +9,7 @@
 body {
 	font-family: "Lucida Sans Unicode","Lucida Grande",Sans-Serif;
 	color: #3E3E3E;
-	background: #94C5EB url(../images/background-grad.png) repeat-x;
+	background: #94C5EB url(./css-jq/images/background-grad.png) repeat-x;
 	font-size: 12px;
 }
 
