--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -25,11 +25,11 @@ body {
 	background: #94C5EB url(./css-jq/images/background-grad.png) repeat-x;
 	font-size: 12px;
 }
-
+/*
 p {
 	padding: 5px;
 }
-
+*/
 a {
 	color: #3687AF;
 }
