--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ footer { clear:both; color:maroon; text-align:center;
 }
 
 
-/* ###################################### */
+/* ###################################### *
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
