--- a/wide.css
+++ b/wide.css
@@ -7,7 +7,7 @@ body #container p {
 }
 
 body #header {
-  background-image: url('../../css/images/header-corners-wide.png');
+  background-image: url('css/images/header-corners-wide.png');
 }
 
 body #celebs table {
