--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -292,17 +292,17 @@ footer#html5style2.data {
 
 /* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css) 
 (The key items are picked out in bold type.)
-equalise for various browsers and change #header to header*
+equalise for various browsers and change #header to header*/
 
 div body header #content { margin:0; padding:0; border:0;
 }
-/*set attributes for consistent appearance in all browsers*
+/*set attributes for consistent appearance in all browsers*/
 html, body, p, ul, li, h1, h2 { margin:0; padding:0;
 }
-/*set images to have no borders*
+/*set images to have no borders*/
 img { border:0;
 }
-/*add display attributes for the semantic tags*
+/*add display attributes for the semantic tags*/
 header, footer, section, article, nav { display:block;
 }
 p { 
@@ -326,7 +326,7 @@ div#html5style2content.data { background-color:transparent; border-left:10px whi
 border-bottom:10px white solid; width: 920px; margin-top:-26px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
 }
 */
-/* ====== h2 ====== *
+/* ====== h2 ====== */
 h2#html5style2h2 { font-size: 100%; color: white; margin: 0 0 10px 0; 
 }
 h3#html5style2h3 { font-size:100%; color: white; margin:0 0 6px 0;
@@ -338,33 +338,33 @@ div#html5style2rightcol { width: 135px; float:right; height: 252px; margin-right
 /*
 div#html5style2midcol { margin-left:10px; margin-right:145px; margin-top: -565px; vertical-align:top;
 }
-/*set nav block position and width and remove the #menu item*
+/*set nav block position and width and remove the #menu item*/
 nav#html5style2nav.data ul { margin: 39px 0 10px 0; width:135px; float:right;
 }
-/*Set un-ordered list style within the menu block only. This removes bullets*
+/*Set un-ordered list style within the menu block only. This removes bullets*/
 nav#html5style2nav.data li { list-style-type:none;
 }
-/* set general side button styles *
+/* set general side button styles */
 nav#html5style2nav.data li.btn { margin-bottom: 3px; text-align: center; width:130px;
 }
 /* set general anchor styles and include the zoom fix for IE6*
 nav#html5style2nav.data li.btn a { display: block; color: white; font-weight: bold; text-decoration: none; zoom:1;
 }
-/* specify mouse state styles *
+/* specify mouse state styles */
 /* mouseout (default) *
 nav#html5style2nav.data li.btn a { background:#559a55; color: white; border: 5px outset #559a55; padding-bottom:3px;
 }
-/* mouseover *
+/* mouseover */
 nav#html5style2nav.data li.btn a:hover { background: red; color:white; border: 5px outset red;
 }
-/*mouse active*
+/*mouse active*/
 nav#html5style2nav.data li.btn a:active { background:maroon; border: 5px inset maroon;
 }
 br.clear { clear:both;
 }
 #html5style2midcol img { margin-left:10px;
 }
-/*change #footer to footer *
+/*change #footer to footer */
 footer { clear:both; color:maroon; text-align:center;
 }
 
@@ -4391,6 +4391,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
