--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -25,7 +25,7 @@ header#html5style2header {
   height: 180px;
   padding: 0;
   border: 10px white solid;
-  background: url(images/header3.jpg);
+  background: url(images/bda-20.png);
   margin: 10px auto;
 }
 
