--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Set styles to equalise the browser rendition*/
 html, h1, h2, h3, h4, h5, p, ol, ul, li { padding: 0; margin: 0;
 }
-div.wrapper { 
+div#wrapper { 
     position: relative; 
     top: 0em; 
     left: 0; 
