--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ div#wrapper {
 
 /* **************************************************************************** */
 
-/* ###################################### *
+/* ###################################### */
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
