--- a/style.css
+++ b/style.css
@@ -1,3 +1,195 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
+@import url('https://fonts.googleapis.com/css?family=Raleway:300');
+html {
+
+}
+
+body {
+  background: #FFF url(images/green-grad.jpg) repeat-x;
+  margin: auto;
+}
+/* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css) 
+(The key items are picked out in bold type.)
+equalise for various browsers and change #header to header*/
+
+div body header #content { margin:0; padding:0; border:0;
+}
+/*set attributes for consistent appearance in all browsers*/
+html, body, p, ul, li, h1, h2 { margin:0; padding:0;
+}
+header#html5-ch1-7header.data .fixed-top {
+  background: #07062f;
+}
+
+header#html5-ch1-7header.data .logo {
+  font-size: 30px;
+  margin-top: -250px;
+  padding: 0;
+  line-height: 1;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+header#html5-ch1-7header.data .logo a {
+  color: #fff;
+}
+
+header#html5-ch1-7header.data .logo img {
+  max-height: 40px;
+}
+
+/*set images to have no borders*/
+img { border:0;
+}
+/*add display attributes for the semantic tags*/
+header, footer, section, article, nav { display:block;
+}
+p { 
+
+    color: #000;
+    margin:auto; 
+    text-align:center;
+}
+/*
+h1#html5-ch1-7h1 { font-size:300%; color :white; position: relative; left:15%; top: 55px; width:480px;
+}
+*/
+
+div.wrapper {position:relative; top:0px; left:0;width:970px; margin:auto; text-align:center;
+}
+
+/*add display attributes for the semantic tags*/
+header,
+footer,
+section,
+article,
+nav {
+  display: block;
+}
+
+/*remove the # from #header*/
+header#html5-ch1-7header.data {
+  width: 920px;
+  height: 180px;
+  padding: 0;
+  border: 10px white solid;
+  background: url(images/header3.jpg);
+  margin: 10px auto;
+}
+
+h1#html5-ch1-7h1 {
+  font-size: 300%;
+  color: white;
+  position: relative;
+  left: 90px;
+  top: -3px;
+  width: 480px;
+}
+
+#html5-ch1-7rosette {
+  position: relative;
+  left: 750px;
+  top: 5px;
+}
+
+div#html5-ch1-7content.data { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
+border-bottom:10px white solid; width: 920px; margin-top:-26px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
+}
+
+h2#html5-ch1-7h2 {
+  font-size: x-large;
+  color: white;
+  margin: 0 0 10px 0;
+}
+
+h3#html5-ch1-7h3 {
+  font-size: large;
+  color: white;
+  margin: 0 0 6px 0;
+}
+
+div#html5-ch1-7col.data {
+  float: left;
+  width: 310px;
+  vertical-align: top;
+}
+
+/*#html5-ch1-7rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
+}*/
+#html5-ch1-7midcol.data {
+  margin-left: 315px;
+  margin-right: 145px;
+  margin-top: 10px;
+  vertical-align: top;
+}
+
+/*set nav block position and width*/
+/*nav { margin:10px 30px 0 10px; width:135px; float:right; 
+}*/
+nav#html5-ch1-7nav ul {
+  margin: 10px 0 10px 0;
+  width: 135px;
+  float: right;
+}
+
+/*Set un-ordered list style within the menu block only. This removes bullets*/
+nav#html5-ch1-7nav li {
+  list-style-type: none;
+}
+
+/* set general side button styles */
+li.btn {
+  margin-bottom: 3px;
+  text-align: center;
+  width: 130px;
+}
+
+/* set general anchor styles and include the zoom fix for IE6*/
+li.btn a {
+  display: block;
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+  zoom: 1;
+}
+
+/* specify mouse state styles */
+/* mouseout (default) */
+li.btn a {
+  background: #559a55;
+  color: white;
+  border: 5px outset #559a55;
+  padding-bottom: 3px;
+}
+
+/* mouseover */
+li.btn a:hover {
+  background: red;
+  color: white;
+  border: 5px outset red;
+}
+
+/*mouse active*/
+li.btn a:active {
+  background: maroon;
+  border: 5px inset maroon;
+}
+
+br.clear {
+  clear: both;
+}
+
+#html5-ch1-7midcol.data img {
+  margin-top: 10px;
+}
+
+footer#html5style2.data {
+  clear: both;
+  color: maroon;
+  text-align: center;
+} 
+
 /*equalise for various browsers and change #header to header*/
 div body header #content { margin:0; padding:0; border:0;
 }
