--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
 @import url('https://fonts.googleapis.com/css?family=Raleway:300');
-html {
-
+div#wrapper { 
+    position: relative; 
+    top: 0em; 
+    left: 0; 
+    width: 100%; 
+    margin: auto; 
+    text-align: center; 
 }
 
 body {
