--- a/style.css
+++ b/style.css
@@ -478,7 +478,7 @@ h2{
 
 /*--------------------------------------------------------------
 # Header
---------------------------------------------------------------*
+--------------------------------------------------------------*/
 header {
   background: rgba(25, 25, 25, 0.95);
   transition: all 0.5s;
