--- a/CSS/base.css
+++ b/CSS/base.css
@@ -50,14 +50,14 @@ a {
 	padding:15px;
   clear: both;
 }
-
+/*
 h2 {
 	border-bottom:2px solid #015287;
 	color: #D15600;
 	padding-top: 10px;
   margin-top: 0;
 }
-
+*/
 table {
 	border-collapse:collapse;
 	font-size:12px;
