--- a/style.css
+++ b/style.css
@@ -339,11 +339,13 @@ h5,
 h6 {
   font-family: "Raleway", sans-serif;
 }
+/*
 h2{
       color: #07062f;
   font-weight: bold;
   font-size: 40px;
 }
+*/
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
