--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -1901,10 +1901,10 @@ hgroup, ul, ol, dd, menu, dl, figure, pre, table, fieldset, legend, hr,
 h1, h2, h3, h4, h5, h6, p, a {
   margin: 5px;
   padding: 0; }
-
+/*
 b, strong {
   font-weight: bold; }
-
+*/
 pre {
   white-space: pre;
   white-space: pre-wrap;
@@ -4391,6 +4391,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
