--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ div#html5-ch1-7col.data {
 
 /*#html5-ch1-7rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }*/
-#html5-ch1-7midcol.data {
+div#html5-ch1-7midcol.data {
   margin-left: 315px;
   margin-right: 145px;
   margin-top: -275px;
