--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ div#html5-ch1-7midcol.data {
 /*set nav block position and width*/
 /*nav { margin:10px 30px 0 10px; width:135px; float:right; 
 }*/
-nav#html5-ch1-7nav.data ul {
+nav.html5-ch1-7nav.data ul {
   margin: 10px 0 10px 0;
   width: 135px;
   float: right;
@@ -252,12 +252,6 @@ br.clear { clear:both;
 /*change #footer to footer */
 footer { clear:both; color:maroon; text-align:center;
 }
-
-
-
-
-
-
 
 /* Set styles to equalise the browser rendition*/
 html, h1, h2, h3, h4, h5, p, ol, ul, li { padding: 0; margin: 0;
