--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ div#html5-ch1-7midcol.data {
 /*set nav block position and width*/
 /*nav { margin:10px 30px 0 10px; width:135px; float:right; 
 }*/
-nav.html5-ch1-7nav.data ul {
+nav#html5-ch1-7nav.data ul {
   margin: 10px 0 10px 0;
   width: 135px;
   float: right;
