--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ header#html5-ch1-7header.data {
   height: 180px;
   padding: 0;
   border: 10px white solid;
-  background: url(images/bda-20.png);
+  background: url(bda-20.png);
   margin: 10px auto;
 }
 
