Change Facebook link color to white

--- a/style.css
+++ b/style.css
@@ -1706,7 +1706,7 @@ nav {
       height: 33px;
       line-height: 36px;
       text-decoration: none;
-      color: #000;
+      color: #fff;
       display: block;
       text-align: center;
       text-transform: uppercase;
