--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ br.clear { clear:both;
 #midcol img { margin-left:10px;
 }
 /*change #footer to footer */
-footer { clear:both; color:maroon; text-align:center;
+footer { clear:both; color: white; text-align:center;
 }
 
 /* Set styles to equalise the browser rendition*/
