--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -20,7 +20,7 @@ nav {
 }
 
 /*remove the # from #header*/
-header#html5style2header {
+header#html5-ch1-7header {
   width: 920px;
   height: 180px;
   padding: 0;
