--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -25,7 +25,7 @@ header#html5-ch1-7header {
   height: 180px;
   padding: 0;
   border: 10px white solid;
-  background: url(images/bda-20.png);
+  background: url(images/bda-20.jpg);
   margin: 10px auto;
 }
 
