--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -1,3 +1,156 @@
+html.fa-events-icons-failed {
+  
+}
+
+body {
+
+}
+
+div.wrapper {
+
+}
+
+div#container.data {
+
+}
+
+div.row {
+  
+}
+
+nav#nav.data {
+
+}
+
+input#mainNavButton.trigger {
+
+}
+
+label {
+
+}
+
+img.logo {
+
+}
+
+ul {
+
+}
+
+li {
+
+}
+
+div.col12 {
+
+}
+
+header#html5-ch1-7header.data {
+
+}
+
+h1#html5-ch1-7h1 {
+
+}
+
+div#content {
+
+}
+
+h2 {
+
+}
+
+div#html5-ch1-7leftcol.data {
+
+}
+
+h3 {
+
+}
+
+img {
+
+}
+
+br {
+
+}
+
+nav#html5-ch1-7nav.data {
+
+}
+
+li.btn {
+
+}
+
+div#html5-ch1-7midcol.data {
+
+}
+
+div.footer {
+
+}
+
+div.company-details {
+
+}
+
+P.copyright {
+
+}
+
+P.distributor {
+
+}
+
+P.address {
+
+}
+
+P.telephone-number {
+
+}
+
+hr.full {
+
+}
+
+div#comment {
+
+}
+
+br {
+
+}
+
+textarea {
+
+}
+
+a.back-to-top.d-flex.align-items-center-justify-content-center.active {
+
+}
+
+section#chapter2 {
+
+}
+
+section#chapter3 {
+
+}
+
+p {
+
+}
+
+footer {
+
+}
+
+
 /*equalise for various browsers and change #header to header*/
 div body header #content {
   margin: 0;
