--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -77,7 +77,18 @@ h1#html5-ch1-7h1 {
 
 }
 
-div#content {
+div#html5-ch1-7content.data {
+    background-color:transparent; 
+    border-left:10px white solid; 
+    border-right:10px white solid; 
+    border-bottom:10px white solid; 
+    width: 970px; 
+    margin-top:-26px; 
+    margin-left:auto; 
+    margin-right:auto; 
+    padding:8px; 
+    font-size:medium; 
+    color:maroon; 
 
 }
 
