--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -124,15 +124,11 @@ nav#html5-ch1-7nav.data {
     float: right;
 }
 
+/* set general side button styles */
 li.btn {
-
-}
-
-div#html5-ch1-7midcol.data {
-  margin-left: 315px;
-  margin-right: 145px;
-  margin-top: -275px;
-  vertical-align: top;
+  margin-bottom: 3px;
+  text-align: center;
+  width: 130px;
 }
 
 div#html5-ch1-7midcol.data {
