--- a/style.css
+++ b/style.css
@@ -1273,7 +1273,7 @@ a:hover {
   outline: 0; }
 
 hgroup, ul, ol, dd, menu, dl, figure, pre, table, fieldset, legend, hr,
-h1, h2, h3, h4, h5, h6, p, a {
+h1, h2, h3, h4, h5, h6, a {
   margin: 0;
   padding: 0; }
 
