Adjust margin for h3 element in style.css

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ h2#html5-ch1-7h2 {
 h3#html5-ch1-7h3 {
   font-size: large;
   color: white;
-  margin: 0 0 6px 0;
+  margin: 10px 0 6px 0;
 }
 
 div#html5-ch1-7col.data {
