--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -40,6 +40,10 @@ div.row {
 }
 
 nav#nav.data {
+	padding: .3em .8em;
+	border: 1px solid rgba(0,0%,100%,.1);
+	background: #58a linear-gradient(hsla(0,0%,100%,.2, transparent);
+	
 
 }
 
