--- a/nav[1].css
+++ b/nav[1].css
@@ -18,8 +18,7 @@ body {
   position: relative;
   padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
-  background: #58a linear-gradient(hsla(0,0%,100%,.2),
-  transparent);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
@@ -28,6 +27,17 @@ body {
   line-height: 1.5;
 }
 #nav ul {
+  padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),
+  transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 125%;
+  line-height: 1.5;
+  
   display: none;
   width: 100%;
   list-style: none;
