--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -7,12 +7,12 @@ div body header #content {
   padding: 0;
   border: 0;
 }
-
+/*
 body {
   background: #FFF url(images/green-grad.jpg) repeat-x;
   margin: auto;
 }
-
+*/
 .callout { position: relative; }
 .callout::before {
 content: "";
