--- a/style.css
+++ b/style.css
@@ -281,6 +281,17 @@ li.btn {
   margin-bottom: 3px;
   text-align: center;
   width: 130px;
+	 padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 125%;
+  line-height: 1.5;
+  border-width: 10px;
+  border-left-width: 0px;
 }
 
 /* set general anchor styles and include the zoom fix for IE6*/
