--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ div.wrapper {
   color: white;
   text-shadow: 0 -.05em .05em hsla(0,0,0,.5);
   font-size: 100%;
+	
   line-height: 1.5;
   border-width: 10px;
   border-left-width: 0px; 
@@ -34,7 +35,7 @@ header#html5-ch1-7header.data .fixed-top {
 }
 
 header#html5-ch1-7header.data .logo {
-  font-size: 30px;
+ /* font-size: 30px; */
   margin-top: 150px;
   padding: 0;
   line-height: 1;
